# vespera

./: .env  .env.template  =1.6.0  =11.0.0  Cargo.toml  HFT.ipynb  HFT_Stanford_PhD_Ultra_Fixed.ipynb  README.md  advanced_error_recovery.py  alpha_wallets.json  benchmark_suite.py  check_system.py  comprehensive_mac_gpu_test.py  comprehensive_monitoring.py  confidence_scoring.py  confidence_scoring.py.bak  confidence_scoring_original.py  config.py  config.py.backup  config.py.backup.1753490059  create_notebook.sh  create_test_files.sh  cupy_fallback.py  cupy_fallback.py.backup  cupy_fallback.py.backup.20250725_203411  cupy_fallback.py.backup.20250725_204045  cupy_fallback.py.backup.20250725_204052  data_feed.rs.backup  deploy_fingerprints.json  deploy_production.sh  discord_setup_guide.md  emergency_stop.sh  enhanced_alpha_wallets.json  entropy_meter.py  entropy_meter.py.bak  environment_template.env  exit_manager.py  final_compliance_check.py  final_fix.sh  fix_api_limits.py  (+100 more)
backup_1753507078/: confidence_scoring.py  config.py  cupy_fallback.py  entropy_meter.py  laggard_sniper.py  logger.py  main.py  notifier.py  notifier_elegant.py  relief_trap.py  signal_engine.py  validate_fixes.py
backup_20250725_185402/: activate.sh  config.py  create_notebook.sh  cupy.py  cupy_fallback.py  cupy_numpy_fallback.py  logger.py  main.py
backup_20250725_185532/: config.py  create_notebook.sh  cupy_fallback.py  entropy_meter.py  laggard_sniper.py  main.rs  notifier.py  okx_executor.rs  risk_engine.rs  simple_test.py  test_macos.py
backup_20250725_231214/: Cargo.toml  auth.rs  create_notebook.sh  cupy_fallback.py  data_feed.rs  logger.py  main.py  main.rs  notifier.py  notifier_elegant.py  relief_trap.py  signal_consciousness.py  signal_engine.py  signal_engine_backup.py  signal_engine_enhanced.py  signal_listener.rs  verify_compliance_fixed.py
backup_20250726_022633/: confidence_scoring.py  signal_engine.py
backup_before_strip_20250726_023135/: benchmark_suite.py  confidence_scoring.py  config.py  create_test_files.sh  cupy_fallback.py  fix_warnings.sh  init_pipeline.sh  install_websockets.sh  laggard_sniper.py  live_data_engine.py  logger.py  notifier_.py  notifier_elegant.py  one.py  one.sh  performance_test_suite.py  send_awakening.py  signal_consciousness.py  signal_engine.py  signal_engine_enhanced.py  test_fixed.sh  test_integration.sh  test_integration_fixed.sh  test_optimized.sh  test_python_modules_fixed.sh  test_repairs.py  test_rust_modules.sh  validate_fixes.py  verify_compliance_fixed.py  verify_nuclear.py
logs/: trade_log.csv  (+1 more)
(+163 files in other folders)
