[package]
name = "hft_executor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hft_executor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
ring = "0.17"
base64 = "0.21"
dotenv = "0.15"
tokio-tungstenite = "0.20"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
