[package]
name = "hft-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ring = "0.16"
base64 = "0.21"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies.tokio-retry]
version = "0.3"

[dependencies.backoff]
version = "0.4"
features = ["tokio"]
