[package]
name = "hft-rust-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
ring = "0.16"
base64 = "0.21"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
futures-util = "0.3"
tokio-tungstenite = "0.20"
rand = "0.8"
