[package]
name = "hft_executor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hft_executor"
path = "main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
ring = "0.16"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
tokio-tungstenite = "0.20"
futures-util = "0.3"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"